[package]
name = "gpw_challenge"
version = "0.1.0"
authors = ["gwierzchowski <gwierzchowski@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
num-traits = "0.2.11"

[dev-dependencies]
rand = "0.7.3"
ndarray = "0.13.1"
ndarray-rand = "0.11.0"
